--- a/Домашнее задание к занятию 12.8 "Резервное копирование баз данных"/Домашнее задание к занятию 12.8 Резервное копирование баз данных Ефимов А.А..md
+++ b/Домашнее задание к занятию 12.8 "Резервное копирование баз данных"/Домашнее задание к занятию 12.8 Резервное копирование баз данных Ефимов А.А..md
@@ -38,7 +38,7 @@ pg_restore -Uvase -C -Ft -d postgres zip_vase.dump
 
 3.1 С помощью официальной документации приведите пример команды инкрементного резервного копирования базы данных MySql.
 Инкрементное резервное копирование с помощью утилиты Persona XtraBackup:
-Cначала создаем полный бэкап,затем от него инкрементный. Возможно делать инкрементный от инкрементного но это не надежно.
+Cначала создаем полный бэкап,затем от него инкрементный. Возможно делать инкрементный от инкрементного, но это не надежно.
 
 xtrabackup --backup --target-dir=/home/backup2/ --datadir=/var/lib/mysql/
 xtrabackup --backup --incremental-basedir=/home/backup2 --target-dir=/home/incr1 --datadir=/var/lib/mysql
