Update Домашнее задание к занятию 12.8 Резервное копирование баз данных Ефимов А.А..md

--- a/Домашнее задание к занятию 12.8 "Резервное копирование баз данных"/Домашнее задание к занятию 12.8 Резервное копирование баз данных Ефимов А.А..md
+++ b/Домашнее задание к занятию 12.8 "Резервное копирование баз данных"/Домашнее задание к занятию 12.8 Резервное копирование баз данных Ефимов А.А..md
@@ -21,13 +21,38 @@
 
 2.1 С помощью официальной документации приведите пример команды резервирования данных и восстановления БД (pgdump/pgrestore).
 
-pg_dump -Uvase -Fc vase > vase.dump
-dropdb -Uvase vase
+Создание резервных копий
+Базовая команда
+Синтаксис:
 
-pg_restore -Uvase -C -d postgres vase.dump
-для сжатия добавляем тип -Ft
-pg_dump -Uvase -Ft vase > zip_vase.dump
-pg_restore -Uvase -C -Ft -d postgres zip_vase.dump
+pg_dump <параметры> <имя базы> > <файл, куда сохранить дамп>
+
+Пример:
+
+pg_dump users > /tmp/users.dump
+
+Пользователь и пароль
+Если резервная копия выполняется не от учетной записи postgres, необходимо добавить опцию -U с указанием пользователя:
+
+pg_dump -U dmosk -W users > /tmp/users.dump
+
+* где dmosk — имя учетной записи; опция W потребует ввода пароля.
+Восстановление
+Базовая команда
+Синтаксис:
+
+psql <имя базы> < <файл с дампом>
+
+Пример:
+
+psql users < /tmp/users.dump
+
+С авторизацией
+При необходимости авторизоваться при подключении к базе вводим:
+
+psql -U dmosk -W users < /tmp/users.dump
+
+* где dmosk — имя учетной записи; опция W потребует ввода пароля.
 
 2.1* Возможно ли автоматизировать этот процесс? Если да, то как? Через скрипт автоматизировать создания резервных копий, добавить в планировщик заданий. При срабатывании тригера на метрику в системе мониторинга запускать скрипт на восстановление. При этом переходить на реплику. Затем догнать восстановленую БД с реплики.
 Приведите ответ в свободной форме.
