--- a/Домашнее задание к занятию 12.8 "Резервное копирование баз данных"/Домашнее задание к занятию 12.8 Резервное копирование баз данных Ефимов А.А..md
+++ b/Домашнее задание к занятию 12.8 "Резервное копирование баз данных"/Домашнее задание к занятию 12.8 Резервное копирование баз данных Ефимов А.А..md
@@ -64,7 +64,7 @@ psql -U dmosk -W users < /tmp/users.dump
 3.1 С помощью официальной документации приведите пример команды инкрементного резервного копирования базы данных MySql.
 Инкрементное резервное копирование с помощью утилиты Persona XtraBackup:
 Cначала создаем полный бэкап,затем от него инкрементный. Возможно делать инкрементный от инкрементного, но это не надежно.
-
+Percona XtraBackup — это утилита для горячего резервного копирования баз данных MySQL. Во время создания резервной копии данных не происходит блокирования таблиц, ваша система продолжает работать без каких бы то ни было ограничений. XtraBackup 2.4 может создавать резервные копии таблиц InnoDB, XtraDB и MyISAM на серверах MySQL 5.11, 5.5, 5.6 и 5.7, а также на сервере Percona для MySQL с XtraDB
 xtrabackup --backup --target-dir=/home/backup2/ --datadir=/var/lib/mysql/
 xtrabackup --backup --incremental-basedir=/home/backup2 --target-dir=/home/incr1 --datadir=/var/lib/mysql
 
